# choqok-tencent

./: CMakeLists.txt  choqok_tencent.desktop  tencentaccount.cpp  tencentaccount.h  tencenteditaccount.cpp  tencenteditaccount.h  tencenteditaccount_base.ui  tencentmicroblog.cpp  tencentmicroblog.h  tencentpostwidget.cpp  tencentpostwidget.h
